--- a/Kaiserreich Korean Translation/localisation/KR_Political_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Political_l_english.yml
@@ -16,28 +16,23 @@ party_pop_0_90:0 "90-100% 정당 인기도"
 SYNDIE_SOC_DEM_NOTICE:0 "(생디칼리스트 제휴)"
 
 ### Starting Events ###
-kr.political.24.t:0 "카이저라이히 Alpha 0.8.4a - 'La Bella Antillana'"
-kr.political.24.d:0 "카이저라이히 개발진이 Alpha 0.8.4a- 'La Bella Antillana'버전을 하츠오브아이언4에 선사합니다! 지난 몇 달간 저희 개발진은 세계 구석구석을 모딩하였고, 이 작업물을 여러분에게 선보이게 되었습니다. 저희가 열심히 작업한만큼 여러분이 즐겁게 플레이하시기를 바랍니다. 한가지 알고 계셔야할 것은, 저희는 이 모드를 만들 때, 여러분이 평화회담에서 가능한 모든 지역을 가져간다는 전제하에 개발을 하였습니다, 따라서 그렇게 해주시길 바랍니다! \n\n또한 이 모드가 아직 알파버전인 것을 명심해주세요. 때문에 많은 버그들, 충돌 그 외 골치아픈 문제들이 발생할 수 있습니다. 만약 상기한 문제들을 발견하신다면, 깃허브의 버그트래커에 글을 남겨주세요.  만약 하고 싶은 질문이 있으시다면, 망설이지 마시고 질문해주세요, 다만 질문전에 게임 내에 있는 질의응답란을 먼저 확인해주세요.\n\n즐겁게 플레이하세요! \n                - 카라 개발진 일동, 개발진 목록은 크레딧란에서 보실 수 있습니다."
+kr.political.24.t:0 "카이저라이히 Alpha 0.8.6"
+kr.political.24.d:0 "카이저라이히 개발진이 Alpha 0.8.6'버전을 하츠오브아이언4에 선사합니다! 지난 몇 달간 저희 개발진은 세계 구석구석을 모딩하였고, 이 작업물을 여러분에게 선보이게 되었습니다. 저희가 열심히 작업한만큼 여러분이 즐겁게 플레이하시기를 바랍니다. 한가지 알고 계셔야할 것은, 저희는 이 모드를 만들 때, 여러분이 평화회담에서 가능한 모든 지역을 가져간다는 전제하에 개발을 하였습니다, 따라서 그렇게 해주시길 바랍니다! \n\n또한 이 모드가 아직 알파버전인 것을 명심해주세요. 때문에 많은 버그들, 충돌 그 외 골치아픈 문제들이 발생할 수 있습니다. 만약 상기한 문제들을 발견하신다면, 깃허브의 버그트래커에 글을 남겨주세요.  만약 하고 싶은 질문이 있으시다면, 망설이지 마시고 질문해주세요, 다만 질문전에 게임 내에 있는 질의응답란을 먼저 확인해주세요.\n\n즐겁게 플레이하세요! \n                - 카라 개발진 일동, 개발진 목록은 크레딧란에서 보실 수 있습니다."
 kr.political.24.a:0 "카이저라이히 개발진분들 고맙습니다!"
 kr.political.24.c:0 "궁금증을 풀어줄 만한게 있을까요?"
 kr.political.24.e:0 "뭔가 놓친게 있는 것 같아..."
 
 kr.political.25.t:0 "질의응답"
 kr.political.25.d:0 "왜 아무 국가도 속국화 할 수 없나요?\n     속국화는 평화회담이 아닌, 이벤트나 국가중점을 통해 이루어집니다.\n\n다음 업데이트는 언제 나와요?\n     저희는 3개월마다 중요 업데이트를 진행하고 있습니다. 물론 필요에 따라 핫픽스를 제공합니다.\n\n일부 모델이 검은색으로 나오는데요?\n     저희는 DLC에셋을 일부 사용 중입니다, 따라서 DLC가 없으시다면 일부는 검은색 텍스쳐가 나올겁니다. 놀라지마세요. 그저 사소한 오류일뿐입니다. 이 문제를 해결하기 위해 텍스쳐 작업 중에 있으니, 업데이트를 확인해주세요.\n\n카이저라이히의 버그 테스트/아트/음악/코딩 작업을 하고 싶습니다, 어디서 연락을 취할 수 있을까요?\n     좋습니다! 우리의 디스코드나 포럼에 글을 쓰시거나, Zankoas에게 메세지를 남겨주세요.\n\n업데이트로 세이브파일이 깨졌습니다!\n     그건 올바른 질문이 아닙니다. 하지만 그 문제를 겪고 계신다면 세이브파일을 불러오시고 일시중지하지 마시고 다시 저장하신 다음, 다시 그걸 불러와보세요. 철인모드를 켜지 않는 것도 도움이 됩니다. 모두 안먹힌다면, 카이저라이히 포럼에서 이전버전을 받을 수 있다는 것을 명심하세요.\n\n카이저라이히와 관련된 다른게 있나요?\n     오직 창작마당에 올려져 있는 음악모드 뿐입니다. 창작마당이나 포럼에서 찾을 수 있으니, 금방 찾을 수 있기를 바래요."
-kr.political.25.a:0 "정치력점수 좀 가져갈 수 있겠어?"
+kr.political.25.a:0 "정치력점수 좀 가져갈 수 있나요?"
 
-kr.political.26.t:0 "뉴스 사건"
-kr.political.26.d:0 "저는 인터내셔널 뉴스 트리뷴의 사장입니다. 카이저라이히는 이벤트, 국가적 초점 그리고 다른 수단들을 통해 전달되는 이야기로 깊이 자리잡혀있는 모드입니다. 하지만, 플레이어인 당신은 이것을 깨닫지 못할 수도 있습니다, 왜냐하면 외국에서 일어나는 사건들은 당신이 알 수 없기 때문입니다. 그래서 우리는 외국에서 일어난 주요 이벤트들에 관해서 전달해주는 뉴스 이벤트 시스템을 만들었습니다. 뉴스 이벤트들은 당신이 세계의 사건들의 의미와 이유를 이해할 수 있도록 도와주는 토막 소식들을 담고 있습니다, 그리고 예쁜데다가 격식있기까지 합니다.\n\n그러나, 당신이 게임 테스터이거나 이 모드에 완전히 중독되서 이번 게임이 이번주에 1000번째 게임이라면, 혹은 눈 앞에 팝업이 계속 나오는 것을 싫어하는 플레이어라면, 이 요소를 완전히 꺼버리거나 중요한 뉴스 이벤트만이 나타나게 하는 선택지도 있습니다. 당신의 선택은..."
-kr.political.26.a:0 "모든걸 알려줘요, 모.든.걸!"
-kr.political.26.b:0 "중요 사건만 알려주세요."
-kr.political.26.c:0 "자잘한 것들도 알고 싶습니다."
+kr.political.26.t:0 "게임규칙에 관한 안내"
+kr.political.26.d:0 "기존에 시작 이벤트에서 조정할 수 있었던 모든 설정들은 1.6패치에 추가된 게임규칙 메뉴로 이동되었습니다.\n\n이제 뉴스와 사건 빈도 설정과 지명 및 도시명 표기법 설정을 게임규칙 메뉴에서 설정할 수 있습니다. 더 고급스러워 보이지 않나요?"
+kr.political.26.a:0 "알겠습니다, 감사합니다!"
 
-kr.political.260.t:0 "지역명 설정"
-kr.political.260.d:0 "0.8.4버전부터 지역명/도시명 표기 방식이 두가지로 나뉘어졌습니다. 하나는 영문식 표기이고, 다른 하나는 이전버전과 같은 원어독음 표기방식입니다. 원어독음 표기방식은 해당 지역이나 도시를 통제하는 국가에 따라서 유동적으로 명칭이 변경됩니다. 가령 엘자스-로트링겐을 프랑스가 점령했다면, 이름이 알자스-로렌으로 변경이 됩니다.\n다만, 한국어 패치에 한에서는 '영문식 표기'가 한국어 번역시에는 그다지 차이점이 없습니다. 가령 Bavaria의 경우 영어/한국어 표기가 다릅니다. 이러한 이유로 영문식 표기는 미번역, 즉, 영어 그대로 출력이 될겁니다.\n\n\n경고! '영문식 표기'는 지명이 바뀌는 어떠한 이벤트도 없을 것입니다. 플레이하는 게임 내내 모든 지명이 고정되며, 변경되지 않을 것입니다."
-kr.political.260.a:0 "영문식 표기를 사용하겠습니다."
-kr.political.260.b:0 "이전버전 처럼 원어독음을 사용하겠습니다."
-
-#kr.political.27 moved to _KR_Political_Notice_l_english.yml
+kr.political.27.t:0 "아이언클래드 패치와 DLC"
+kr.political.27.d:0 "Man the Gun DLC가 필요할까요? 아니면 Waking the Tiger 혹은 Death or Dishonour는요? 세계는 붕괴될 운명인가요?\n\n아닙니다, 아무런 DLC없이도 카이저라이히 Alpha 0.8.6를 플레이하실 수 있습니다 물론 세계는 붕괴하겠지요.\n\n한 가지 더 말하자면, 만약 당신이 DLC를 가지고 있다면, DLC를 적용해서 더 멋진 모델들과 기능들을 사용해보세요!"
+kr.political.27.a:0 "정보 감사합니다. 이제 게임 좀 할 수 있을까요?"
 
 kr.political.28.t:0 "뭔가 놓친게 있는 것 같아..."
 kr.political.28.d:0 "만우절 장난을 찾고 계신기요? 진영가입 제한 제거를 찾고 계신가요?\n\n그 2개는 서브모드로 옮겨졌습니다! 창작마당에 있는 카이저라이히 모음집을 들어가시면, 찾으실 수 있습니다!"
@@ -51,17 +46,19 @@ kr.political.40.a:0 "진지하게, 신고하세요."
 ### returning cores
 return_cores_to_ally:0 "Return [From.GetAdjective] Lands"
 return_cores_to_ally_desc:0 "The [Root.GetAdjective] government has been discussing what to do with the [From.GetAdjective] lands we currently occupy - land which we have no rightful claim to. Should we return the land to our [From.GetAdjective] allies?"
+return_cores_to_subject:0 "Return [From.GetAdjective] Lands"
+return_cores_to_subject_desc:0 "The [Root.GetAdjective] government has been discussing what to do with the [From.GetAdjective] lands we currently occupy - land which we have no rightful claim to. Should we return the land to our subjects in [From.GetNameDef]?"
 KR_returned_land:0 "Returned Our Land"
 KR_will_not_return:0 "§Y[This.GetName]§! will §Rnot§! be returned\n"
 KR_will_return_rest:0 "All other states which are [return_to.GetAdjective] cores or claims will be returned to §Y[return_to.GetNameDef]§!\n"
 KR_will_return_all:0 "All owned states which are [return_to.GetAdjective] cores or claims will be returned to §Y[return_to.GetNameDef]§!\n"
-kr.political.75.t:0 "The [From.From.GetAdjective] Lands"
-kr.political.75.d:0 "The [Root.GetAdjective] government has been discussing what to do with the [return_to.GetAdjective] lands we currently occupy - land which we have no rightful claim to. Should we return the land to our [return_to.GetAdjective] allies?"
-kr.political.75.a:0 "Yes, return everything we hold."
-kr.political.75.b:0 "Give them everything but the most vital provinces."
-kr.political.75.c:0 "On second thought..."
-kr.political.76.t:0 "[From.GetNameDefCap] Returns Our Land"
-kr.political.76.d:0 "Our allies in [From.GetNameDefCap]"
+kr.political.75.a:0 "Yes, return all neighboring lands"
+kr.political.75.b:0 "Return all neighboring lands but the most vital"
+kr.political.75.c:0 "Give them neighboring non-vital core lands only"
+kr.political.75.e:0 "Give them neighboring non-vital claims only"
+kr.political.75.f:0 "We intend to keep everything of theirs we have..."
+kr.political.76.t:0 "[From.GetNameDefCap] Returns [Root.GetAdjective] Land"
+kr.political.76.d:0 "Our allies in [From.GetNameDefCap] have returned some of our proper lands to us!"
 kr.political.76.a:0 "Great!"
 
 KR_different_ideology:0 "다른 이념"
