--- a/Kaiserreich Korean Translation/localisation/KR_Republic_of_Italy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Republic_of_Italy_l_english.yml
@@ -184,14 +184,36 @@ ITA_austrian_freindship:0 "오스트리아와 친선"
 ### Decisions ###
 ITA_foreign_policy:0 "대외 정책"
 ITA_foreign_policy_desc:0 "It is crucial that we begin to shift our focus outward and forge alliances and/or establish ties with other nations so as to solidify our position on the world stage."
+ITA_war_with_venice:0 "베네치아 봉기"
+ITA_war_with_venice_desc:0 "The Venetians have risen up against the [Root.GetAdjective] government. We must prove that we are able to deal with them, and relatively quickly, before confidence in our new government runs out!"
 ITA_call_the_austrians_sri:0 "오스트리아를 호출하라"
 ITA_call_the_austrians_sri_desc:0 "We are at war with the syndicalist republic. We should ask the Austrians to come in and assist us and make sure that the syndicalists are defeated."
 ITA_join_the_austrian_pact:0 "오스트리아 조약에 참여"
 ITA_join_the_austrian_pact_desc:0 "Austria has formed an alliance to protect southern Europe, or more correctly her sphere of influence. As we are within said sphere it would be to our benefit if we join their alliance."
 ITA_unite_italy:0 "이탈리아 통일"
 ITA_unite_italy_desc:0 "Italy was divided during the Italian civil war. However at long last the Republic of Italy has triumphed and now we have unified the country again."
-ITA_political_decisions:0 "Political Decisions"
-ITA_political_decisions_desc:0 "There are many different political decisions that we can take to shape the nature of the republic."
+ITA_political_decisions:0 "정치 결단"
+
+ITA_claim_ticino:0 "Establish Irridentist Claim on Ticino"
+ITA_claim_ticino_desc:0 "Ticino is a region of Switzerland primarily inhabited by Italians, and it is in our interests to establish a more permanent claim on the region."
+ITA_claim_nice:0 "Establish Irridentist Claim on Nice"
+ITA_claim_nice_desc:0 "Annexed by France in 1860, Nice is properly part of the Italian domain, and it is in our interests to establish a more permanent claim on the region."
+ITA_claim_trentino:0 "Establish Irridentist Claim on Trentino"
+ITA_claim_trentino_desc:0 "Once Italian territory, Trentino was passed to the Austrians after the Napoleonic wars, and it is in our interests to establish a more permanent claim on the region."
+ITA_claim_southern_tyrol:0 "Establish Irridentist Claim on Southern Tyrol"
+ITA_claim_southern_tyrol_desc:0 "While our claim over the area is weak, Southern Tyrol is an extension of Trentino and was once part of the Roman domain. It is in our interests to establish a more permanent claim on the region."
+ITA_claim_trieste:0 "Establish Irridentist Claim on Trieste"
+ITA_claim_trieste_desc:0 "Once part of the domain of Venice, Trieste is properly Italian territory and it is in our interests to establish a more permanent claim on the region."
+ITA_claim_istria:0 "Establish Irridentist Claim on Istria"
+ITA_claim_istria_desc:0 "Once part of the domain of Venice, Istria is properly Italian territory and it is in our interests to establish a more permanent claim on the region."
+ITA_claim_dalmatia:0 "Establish Irridentist Claim on the Dalmatian Coast"
+ITA_claim_dalmatia_desc:0 "Once part of the domain of Venice, the Dalmatian Coast is properly Italian territory and it is in our interests to establish a more permanent claim on the region."
+ITA_claim_lika:0 "Establish Irridentist Claim on the Lika"
+ITA_claim_lika_desc:0 "Once part of the domain of Venice, Lika is properly Italian territory and it is in our interests to establish a more permanent claim on the region."
+ITA_claim_malta:0 "Establish Irridentist Claim on Malta"
+ITA_claim_malta_desc:0 "The island of Malta is an integral part of Italy, and it is in our interests to establish a more permanent claim on the region."
+ITA_claim_corsica:0 "Establish Irridentist Claim on Corsica"
+ITA_claim_corsica_desc:0 "Once part of the realm of Genoa, Corsica is properly Italian territory and it is in our interests to establish a more permanent claim on the region."
 
 ### Cosmetic Tags ###
 #ITA_federation_social_democrat:0 "이탈리아 연방" all already defined in Countries_cosmetic file
@@ -606,77 +628,15 @@ ita.29.t:0 "The Accademia Nazionale di Arte Drammatica"
 ita.29.d:0 "Today the Accademia Nazionale di Arte Drammatica was founded in Rome to serve as the centre of the performing arts within the [Root.GetName] now that Rome is our capital once again. The Academy shall promote the education of people who seek to enter the arts."
 ita.29.a:0 "Let us support culture"
 
-ita.30.t:0 ""
-ita.30.d:0 ""
-ita.30.a:0 ""
+ita.40.t:0 "Italian Government Overthrown"
+ita.40.d.lombardy:0 "Faced with a population that has become increasingly frustrated with the drawn out war against the Venetians, the government has been faced down by an assembled mob and forced to flee. The new government is headed by the Duke of Lombardy, Adriano Visconti, with the - albeit temporary - support of the military."
+ita.40.d.nolombardy:0 "Faced with a population that has become increasingly frustrated with the drawn out war against the Venetians, the government has been faced down by an assembled mob and forced to flee. The new government has promised free elections and has - for the moment - the full support of the Italian military."
+ita.40.a:0 "So much for that"
 
-ita.33.t:0 ""
-ita.33.d:0 ""
-ita.33.a:0 ""
-
-ita.34.t:0 ""
-ita.34.d:0 ""
-ita.34.a:0 ""
-
-ita.35.t:0 ""
-ita.35.d:0 ""
-ita.35.a:0 ""
-
-ita.36.t:0 ""
-ita.36.d:0 ""
-ita.36.a:0 ""
-
-ita.37.t:0 ""
-ita.37.d:0 ""
-ita.37.a:0 ""
-
-ita.38.t:0 ""
-ita.38.d:0 ""
-ita.38.a:0 ""
-
-ita.39.t:0 ""
-ita.39.d:0 ""
-ita.39.a:0 ""
-
-ita.40.t:0 ""
-ita.40.d:0 ""
-ita.40.a:0 ""
-
-ita.41.t:0 ""
-ita.41.d:0 ""
-ita.41.a:0 ""
-
-ita.42.t:0 ""
-ita.42.d:0 ""
-ita.42.a:0 ""
-
-ita.43.t:0 ""
-ita.43.d:0 ""
-ita.43.a:0 ""
-
-ita.44.t:0 ""
-ita.44.d:0 ""
-ita.44.a:0 ""
-
-ita.45.t:0 ""
-ita.45.d:0 ""
-ita.45.a:0 ""
-
-ita.46.t:0 ""
-ita.46.d:0 ""
-ita.46.a:0 ""
-
-ita.47.t:0 ""
-ita.47.d:0 ""
-ita.47.a:0 ""
-
-ita.48.t:0 ""
-ita.48.d:0 ""
-ita.48.a:0 ""
-
-ita.49.t:0 ""
-ita.49.d:0 ""
-ita.49.a:0 ""
+ita.41.t:0 "Italian Government Overthrown"
+ita.41.d.lombardy:0 "Unable to score a quick victory against the Venetian government, the Italian government has been faced down by an assembled mob and forced to flee. The new government is headed by the Duke of Lombardy, Adriano Visconti, with the - albeit temporary - support of the military. The Duke has expressed his desire for peace with Venice, and has pulled all troops from our common border."
+ita.41.d.nolombardy:0 "Unable to score a quick victory against the Venetian government, the Italian government has been faced down by an assembled mob and forced to flee. The new government has expressed its desire for peace with Venice, and has pulled all troops from our common border."
+ita.41.a:0 "Good!"
 
 ita.50.t:0 "The Battle for the Lira"
 ita.50.d:0 "The first of Four Economic 'battles' designed to fix the economy, the battle for the Lira will stabilize the currency of the Republic. As all battles are, it may be a struggle, but by stabilizing the currency of the Republic we will be able to fulfil our Italian destiny."
