--- a/Kaiserreich Korean Translation/localisation/KR_Traits_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Traits_l_english.yml
@@ -9,7 +9,7 @@ paranoid_francophobe:0 "편집증적인 프랑스 혐오자"
 hog_ambitious_union_boss:0 "야심있는 노조 지도자"
 hog_backroom_backstabber:0 "막후 중상가"
 hog_corporate_suit:0 "기업 중역"
-hog_flamboyant_tough_guy:0 "화려한 터프 가이"
+hog_flamboyant_tough_guy:0 "대담한 야만인"
 hog_happy_amateur:0 "행복한 아마추어"
 hog_local_tyrant:0 "지역 두목"
 hog_naive_optimist:0 "순진한 낙천주의자"
@@ -49,7 +49,7 @@ eco_keynesian_economy:0 "케인즈 경제"
 eco_laissez_faire_capitalist:0 "자유방임 경제"
 eco_military_entrepreneur:0 "군 사업가"
 eco_mixed_economy:0 "혼합된 경제"
-eco_oil_baron:0 "오일 바론"
+eco_oil_baron:0 "석유 거물"
 eco_planned_economy_proponent:0 "계획 경제 지지자"
 eco_reformer:0 "개혁가"
 eco_resource_industrialist:0 "자원 산업가"
@@ -82,15 +82,15 @@ for_the_cloak_n_dagger_schemer:0 "염탐하는 책략가"
 
 ### Security Minister ###
 sec_back_stabber:0 "중상가"
-sec_compassionate_gentleman:0 "연민어린 신사"
+sec_compassionate_gentleman:0 "연민어린 지도자"
 sec_crime_fighter:0 "범죄 수사대원"
 sec_crooked_kleptocrat:0 "비정직한 부패 정치인"
 sec_efficient_sociopath:0 "유능한 소시오패스"
 sec_great_soul:0 "위대한 영혼"
 sec_health_and_safety:0 "건강과 안전"
-sec_man_of_the_people:0 "인민의 인물"
+sec_man_of_the_people:0 "인민의 지도자"
 sec_media_magnate:0 "언론 거물"
-sec_prince_of_terror:0 "테러의 왕자"
+sec_prince_of_terror:0 "야간 테러"
 sec_secret_police_chief:0 "비밀 경찰 국장"
 sec_silent_lawyer:0 "조용한 변호사"
 sec_preserver_of_culture:0 "문화의 수호자"
@@ -144,8 +144,8 @@ navy_leader:0 "제독"
 ideological_crusader:0 "이념 운동가"
 popular_figurehead:0 "인기 있는 얼굴마담"
 silent_workhorse:0 "조용한 일꾼"
-compassionate_gentleman:0 "연민어린 신사"
-prince_of_terror:0 "테러의 왕자"
+compassionate_gentleman:0 "연민어린 지도자"
+prince_of_terror:0 "야간 테러"
 backroom_backstabber:0 "뒷담화꾼"
 smooth_talking_charmer:0 "매력적인 달변가"
 fortification_engineer:0 "요새 공학자"
